--- a/sass/_gradient.scss
+++ b/sass/_gradient.scss
@@ -1,9 +1,4 @@
 @use "variables" as var;
-@property --rotate {
-    syntax: "<angle>";
-    initial-value: 132deg;
-    inherits: false;
-  }
 #container {
     z-index: -1 !important;
     position: absolute;
@@ -22,7 +17,7 @@
  .day{
     background-image: linear-gradient( 
         212deg,
-        var.$c-blue,
+        var.$c-bluepale,
         var.$c-pink,
         var.$c-pinker 45%,
         var.$c-light,
