--- a/sass/_timer.scss
+++ b/sass/_timer.scss
@@ -22,7 +22,7 @@
 }
 #chart-outer {
   position: relative;
-  background-color: white;
+  background-color: var.$c-light;
   width: 100%; 
   height: 100%; 
   position: relative;
