--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,7 +3,10 @@ $c-dark: #0e0a28;
 $c-gold: #F6AA1C;
 $c-pink: #f79ff6;
 $c-blue: #7670ae;
+$c-bluepale: #9c96d9;
 $c-pinker: #e45ecf;
 $c-green: #adb900;
 $c-greener: #628e1f;
+$c-transparent: rgba(255, 255, 255, 0);
+$c-transparenter: rgba(255, 255, 255, 0.2);
 
